# audio_generator_gui

./: .gitignore  README.md  VOICE_INDEX  config.json  main.py  pyproject.toml  requirements.txt
interfaces/: __init__.py  ui_about.py  ui_generate.py  ui_settings.py
lang/: en.json  jp.json  ru.json  zh-cn.json  zh-tw.json
